[gd_scene load_steps=12 format=3 uid="uid://hhy78o5qolno"]

[ext_resource type="Script" path="res://Scenes/StageSelect/StageSelect.gd" id="1_0kr35"]
[ext_resource type="Texture2D" uid="uid://dqe6i8xvwotle" path="res://Assets/bg/stages0.png" id="1_6aai7"]
[ext_resource type="PackedScene" uid="uid://bho6th882qje0" path="res://Scenes/StageSelect/StagesOverview.tscn" id="2_nrtxk"]
[ext_resource type="PackedScene" uid="uid://c3vf0fdejs72s" path="res://Scenes/StageSelect/StageDetails.tscn" id="4_26rrt"]
[ext_resource type="FontFile" uid="uid://dqdbst8avnfuo" path="res://Assets/fonts/Lady Radical.ttf" id="6_asf3s"]
[ext_resource type="PackedScene" uid="uid://bqgqlnp8nk2x2" path="res://Scenes/Statbar/Statbar.tscn" id="7_8jogn"]
[ext_resource type="Script" path="res://Scenes/QuestSelect/BackButton.gd" id="8_fl1vr"]
[ext_resource type="Texture2D" uid="uid://bejgmt5gipy1l" path="res://Assets/sprites/icons.png" id="9_l3xwp"]

[sub_resource type="LabelSettings" id="LabelSettings_pehmt"]
font = ExtResource("6_asf3s")
shadow_size = 0
shadow_color = Color(0, 0, 0, 1)
shadow_offset = Vector2(0, 1)

[sub_resource type="AtlasTexture" id="AtlasTexture_baxs2"]
atlas = ExtResource("9_l3xwp")
region = Rect2(22, 44, 12, 8)

[sub_resource type="AtlasTexture" id="AtlasTexture_yjf3c"]
atlas = ExtResource("9_l3xwp")
region = Rect2(34, 44, 12, 8)

[node name="StageSelect" type="MarginContainer"]
anchors_preset = -1
anchor_right = 0.25
anchor_bottom = 0.25
scale = Vector2(4, 4)
script = ExtResource("1_0kr35")

[node name="Background" type="TextureRect" parent="."]
layout_mode = 2
texture = ExtResource("1_6aai7")
stretch_mode = 5

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 2
size_flags_horizontal = 0
size_flags_vertical = 0
theme_override_constants/margin_left = 10
theme_override_constants/margin_top = 24

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
layout_mode = 2
theme_override_constants/separation = 10

[node name="StagesOverview" parent="MarginContainer/VBoxContainer" instance=ExtResource("2_nrtxk")]
layout_mode = 2

[node name="StageDetails" parent="MarginContainer/VBoxContainer" instance=ExtResource("4_26rrt")]
unique_name_in_owner = true
layout_mode = 2

[node name="MarginContainer2" type="MarginContainer" parent="."]
layout_mode = 2
size_flags_horizontal = 8
size_flags_vertical = 0
theme_override_constants/margin_top = 10
theme_override_constants/margin_right = 10

[node name="QuestNameLabel" type="Label" parent="MarginContainer2"]
unique_name_in_owner = true
layout_mode = 2
size_flags_vertical = 1
text = "Glory Days [h]"
label_settings = SubResource("LabelSettings_pehmt")

[node name="Statbar" parent="." instance=ExtResource("7_8jogn")]
layout_mode = 2

[node name="MarginContainer3" type="MarginContainer" parent="."]
layout_mode = 2
size_flags_horizontal = 0
size_flags_vertical = 0
theme_override_constants/margin_left = 10
theme_override_constants/margin_top = 7

[node name="BackButton" type="MarginContainer" parent="MarginContainer3"]
layout_mode = 2
script = ExtResource("8_fl1vr")

[node name="Normal" type="TextureRect" parent="MarginContainer3/BackButton"]
layout_mode = 2
texture = SubResource("AtlasTexture_baxs2")

[node name="Hovered" type="TextureRect" parent="MarginContainer3/BackButton"]
modulate = Color(1, 1, 1, 0)
layout_mode = 2
texture = SubResource("AtlasTexture_yjf3c")

[node name="Camera2D" type="Camera2D" parent="."]
position = Vector2(160, 90)

[connection signal="icon_selected" from="MarginContainer/VBoxContainer/StagesOverview" to="." method="_on_stages_overview_icon_selected"]
[connection signal="interacted" from="MarginContainer/VBoxContainer/StageDetails" to="." method="_on_stage_details_interacted"]
